--- a/agijagi/app/src/main/res/values/strings.xml
+++ b/agijagi/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">agijagi</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="google_client_ID">88391793720-d6n2bedpd5foq7tjmui3o9ka9i0pjrsg.apps.googleusercontent.com</string>
+    <string name="google_web_client_ID">88391793720-f0vufuk0fecake6q95mu8upg99cqgom4.apps.googleusercontent.com</string>
 
 </resources>
